// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBorrow should render correctly 1`] = `
<div>
  <div
    class="sc-bdfBwQ cAtJaJ"
  >
    <div />
  </div>
</div>
`;

exports[`StatusBorrow should render correctly with status borrowing 1`] = `
<div>
  <div
    class="sc-bdfBwQ cAtJaJ"
  >
    <div
      class="borrowing"
    >
      Đang mượn
    </div>
  </div>
</div>
`;

exports[`StatusBorrow should render correctly with status closed 1`] = `
<div>
  <div
    class="sc-bdfBwQ cAtJaJ"
  >
    <div
      class="closed"
    >
      Đã trả
    </div>
  </div>
</div>
`;

exports[`StatusBorrow should render correctly with status draft 1`] = `
<div>
  <div
    class="sc-bdfBwQ cAtJaJ"
  >
    <div
      class="draft"
    >
      Bản nháp
    </div>
  </div>
</div>
`;
